:sparkles: Say node

--- a/scenarioNodes/locales/en/onAliceEvent.json
+++ b/scenarioNodes/locales/en/onAliceEvent.json
@@ -2,6 +2,7 @@
 	"onAliceEvent": {
 		"broker": "Broker",
 		"event": "Event",
-		"format": "Format"
+		"format": "Format",
+		"waiting": "waiting"
 	}
 }
