--- a/scenarioNodes/locales/de/sayRandom.json
+++ b/scenarioNodes/locales/de/sayRandom.json
@@ -3,7 +3,10 @@
 		"skill": "Skill",
 		"talk": "Talk",
 		"replaceOverwrite": "Replace Overwrite",
-		"broker": "Broker",
-		"client": "DeviceId"
+		"client": "Device",
+	  	"connection": "Alice Instanz",
+	  	"waiting": "Warte auf Eingabe",
+	  	"invalidTopic": "Topic nicht gültig",
+	  	"missingConfig": "Einstellungen fehlen"
 	}
 }
