sendNotification via NodeRed tweaks, translation and docu

--- a/scenarioNodes/locales/de/sendNotification.json
+++ b/scenarioNodes/locales/de/sendNotification.json
@@ -4,6 +4,7 @@
 	  	"connection": "Alice Instanz",
 	  	"message": "Nachricht",
 	  	"key": "Schlüssel",
-	  	"header": "Titel"
+	  	"header": "Titel",
+	  	"waiting": "Warte auf Nachricht"
 	}
 }
